--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="../assets/calculator-math-calculate-accounting-finance-count-office-svgrepo-com.svg" />
     <link rel="stylesheet" href="../src/index.css">
-    <title>React App</title>
+    <title>Reactulator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
