--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="../assets/calculator-one-svgrepo-com.svg" />
+    <link rel="icon" type="image/svg+xml" href="./calculator.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="../assets/calculator-math-calculate-accounting-finance-count-office-svgrepo-com.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/calculator.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
